<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        android:background="#0000FF"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapCharacters"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Gênero"
        android:textSize="16sp"
        android:background="#0000FF"
        android:textColor="#FFFFFF"/>

    <RadioGroup
        android:id="@+id/rdgPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbManha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/Masculino"
            android:textColor="@android:color/tertiary_text_light"/>

        <RadioButton
            android:id="@+id/rdbTarde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/Femenino"
            android:textColor="@android:color/tertiary_text_light"/>

    </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="16sp"
            android:background="#0000FF"
            android:textColor="#FFFFFF"/>

        <EditText
            android:id="@+id/edtemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:background="#0000FF"
        android:textColor="#FFFFFF"/>

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencias"
        android:textSize="16sp"
        android:background="#0000FF"
        android:textColor="#FFFFFF"/>

    <CheckBox
        android:id="@+id/chkInternet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/msc"
        android:textColor="@android:color/tertiary_text_light"/>

    <CheckBox
        android:id="@+id/chkTelefone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cinema"
        android:textColor="@android:color/tertiary_text_light"/>

    <CheckBox
        android:id="@+id/chkTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/esporte"
        android:textColor="@android:color/tertiary_text_light"/>

    <CheckBox
        android:id="@+id/chkStreaming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Gastronomia"
        android:textColor="@android:color/tertiary_text_light"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/AtNot"
            android:textSize="16sp"
            android:background="#0000FF"
            android:textColor="#FFFFFF"/>

        <Switch
            android:id="@+id/swtWhats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/nao"
            android:textOn="@string/sim"
            android:textSize="16sp"
            android:textColor="@android:color/tertiary_text_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exibir"
            android:layout_margin="@dimen/margem"/>

        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:layout_margin="@dimen/margem"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_200"
        android:padding="@dimen/margem"
        android:visibility="invisible">

        <TextView
            android:id="@+id/txtNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtWhats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/txtPref"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>